--- a/CursoCss/responsive/04_Media-Queries.html
+++ b/CursoCss/responsive/04_Media-Queries.html
@@ -62,6 +62,34 @@
             <section>
               <h2>Typical Device Breakpoints</h2>
               <p>There are tons of screens and devices with different heights and widths, so it is hard to create an exact breakpoint for each device. To keep things simple you could target five groups:</p>
+
+              <div class="example">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, aliquid rem similique placeat labore quasi veniam pariatur nostrum facilis veritatis?</p>
+              </div>
+            </section>
+            <section>
+              <h2>Orientation: Portrait / Landscape</h2>
+              <p> Media queries can also be used to change layout of a page depending on the orientation of the browser.</p>
+              <p>You can have a set of CSS properties that will only apply when the browser window is wider than its height, a so called "Landscape" orientation:</p>
+
+              <div class="lands">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic, voluptatem.</p>
+              </div>
+            </section>
+            <section>
+              <h2>Hide Elements With Media Queries</h2>
+              <p>Another common use of media queries, is to hide elements on different screen sizes:</p>
+
+              <div class="hide">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, error?</p>
+              </div>
+            </section>
+            <section>
+              <h2>Change Font Size With Media Queries</h2>
+              <p>You can also use media queries to change the font size of an element on different screen sizes:</p>
+              <div class="font">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique, est.</p>
+              </div>
             </section>
         </div>
     </body>
