--- a/CursoCss/responsive/02_Viewport.html
+++ b/CursoCss/responsive/02_Viewport.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initian-scale=1.0">
         <title>Viewport</title>
-        <link rel="stylesheet" href="../css/responsive/02_ Viewport.css">
+        <link rel="stylesheet" href="responsive/02_ Viewport.css">
         <style type="text/css">
             @import url("https://www.w3schools.com/w3css/4/w3.css");
         </style>
