--- a/CursoCss/responsive/04_Media-Queries.html
+++ b/CursoCss/responsive/04_Media-Queries.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Media Queries</title>
-        <link rel="stylesheet" href="../css/responsive/04_Media-Queries.css">
+        <link rel="stylesheet" href="responsive/04_Media-Queries.css">
     </head>
     <body>
         <h1>Responsive Web Design - Media Queries</h1>
