--- a/CursoCss/responsive/05_Images.html
+++ b/CursoCss/responsive/05_Images.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Images</title>
-        <link rel="stylesheet" href="../css/responsive/05_Images.css">
+        <link rel="stylesheet" href="responsive/05_Images.css">
     </head>
     <body id="body">
         <h1 class="h1">Responsive Web Design - Images</h1>
