--- a/CursoCss/responsive/06_Videos.html
+++ b/CursoCss/responsive/06_Videos.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Responsive Web Design Videos</title>
-        <link rel="stylesheet" href="../css/responsive/06_Videos.css">
+        <link rel="stylesheet" href="responsive/06_Videos.css">
         <style>
             html {
                 background-image: url("/backdrop.png");
