Atualização de arquivos

--- a/CursoCss/CSS3/01_columns.html
+++ b/CursoCss/CSS3/01_columns.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Columns</title>
-    <link rel="stylesheet" href="../css/css3/01_columns.css">
+    <link rel="stylesheet" href="css3/01_columns.css">
 </head>
 <body>
     
