--- a/CursoCss/CSS3/10_2D Transforms.html
+++ b/CursoCss/CSS3/10_2D Transforms.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>2D Transforms</title>
-    <link rel="stylesheet" href="../css/css3/10_2D-Transforms.css">
+    <link rel="stylesheet" href="css3/10_2D-Transforms.css">
 </head>
 <body>
     <h1>CSS3 2D Transforms</h1>
