--- a/CursoCss/CSS3/12_Transitions.html
+++ b/CursoCss/CSS3/12_Transitions.html
@@ -3,7 +3,7 @@
     <head>
         <title>Transitions</title>
         <meta charset="utf8">
-        <link rel="stylesheet" href="../css/css3/12_Transitions.css">
+        <link rel="stylesheet" href="css3/12_Transitions.css">
     </head>
     <body>
         <h2>Transitions</h2>
