--- a/CursoCss/CSS3/13_Animations.html
+++ b/CursoCss/CSS3/13_Animations.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf8">
     <title>Animations</title>
-    <link rel="stylesheet" href="../css/css3/13_Animations.css">
+    <link rel="stylesheet" href="css3/13_Animations.css">
 </head>
 
 <body>
