--- a/CursoCss/CSS3/14_styling-images.html
+++ b/CursoCss/CSS3/14_styling-images.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Styling Images</title>
-    <link rel="stylesheet" href="../css/css3/14_styling-images.css">
+    <link rel="stylesheet" href="css3/14_styling-images.css">
 </head>
 <body>
     <h2>Rounded Images</h2>
