--- a/CursoCss/CSS3/15_Object-fit.html
+++ b/CursoCss/CSS3/15_Object-fit.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ojbject-fit</title>
-    <link rel="stylesheet" href="../css/css3/15_Object-fit.css">
+    <link rel="stylesheet" href="css3/15_Object-fit.css">
 </head>
 <body>
     <h2>CSS The object-fit Property</h2>
