--- a/CursoCss/CSS3/17_pagination.html
+++ b/CursoCss/CSS3/17_pagination.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pagination</title>
-    <link rel="stylesheet" href="../css/css3/17_pagination.css">
+    <link rel="stylesheet" href="css3/17_pagination.css">
 </head>
 <body>
     <h2>Simple Pagination</h2>
