--- a/CursoCss/CSS3/18_Multiple-Columns.html
+++ b/CursoCss/CSS3/18_Multiple-Columns.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CSS Multiple Columns</title>
-    <link rel="stylesheet" href="../css/css3/18_Multiple-Columns.css">
+    <link rel="stylesheet" href="css3/18_Multiple-Columns.css">
 </head>
 <body>
     <h2>CSS Multiple Columns</h2>
