--- a/CursoCss/CSS3/19_Interface.html
+++ b/CursoCss/CSS3/19_Interface.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Interface</title>
-    <link rel="stylesheet" href="../css/css3/19_Interface.css">
-    <link rel="stylesheet" href="../css/css3/18_Multiple-Columns.css">
+    <link rel="stylesheet" href="css3/19_Interface.css">
+    <link rel="stylesheet" href="css3/18_Multiple-Columns.css">
 </head>
 
 <body>
