--- a/CursoCss/CSS3/20_Variables.html
+++ b/CursoCss/CSS3/20_Variables.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Variables</title>
-        <link rel="stylesheet" href="../css/css3/20_Varibles.css">
+        <link rel="stylesheet" href="css3/20_Varibles.css">
     </head>
     <body>
         <h1>CSS Variable</h1>
