--- a/CursoCss/CSS3/21_Flexbox.html
+++ b/CursoCss/CSS3/21_Flexbox.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Flexbox</title>
-    <link rel="stylesheet" href="../css/css3/23_Flexbox.css">
+    <link rel="stylesheet" href="css3/23_Flexbox.css">
 </head>
 <body>
     <h2>CSS Flexbox Layout Module</h2>
