--- a/CursoCss/CSS3/2_Rounded_Corners.html
+++ b/CursoCss/CSS3/2_Rounded_Corners.html
@@ -4,7 +4,7 @@
         <title>Rounded Corners</title>
         <meta charset="utf-8">
         <meta name="author" content="Rodrigo S França">
-        <link rel="stylesheet" href="../css/css3/2_Rounded_Corners.css">
+        <link rel="stylesheet" href="css3/2_Rounded_Corners.css">
     </head>
     <body>
         <h1>CSS3 Rounded Corners</h1>
