--- a/CursoCss/CSS3/4_Backgrounds.html
+++ b/CursoCss/CSS3/4_Backgrounds.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Backgrounds</title>
-    <link rel="stylesheet" href="../css/css3/4_Backgrounds.css">
+    <link rel="stylesheet" href="css3/4_Backgrounds.css">
 </head>
 <body>  
     <h1>CSS3 Backgrounds</h1>
