--- a/CursoCss/CSS3/6_Gradients.html
+++ b/CursoCss/CSS3/6_Gradients.html
@@ -4,7 +4,7 @@
         <title>CSS Gradient</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../css/css3/6_Gradients.css">
+        <link rel="stylesheet" href="css3/6_Gradients.css">
     </head>
     <body>
         <article>
