--- a/CursoCss/CSS3/8_Text.html
+++ b/CursoCss/CSS3/8_Text.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CSS3 Text</title>
-    <link rel="stylesheet" href="../css/css3/8_Text.css">
+    <link rel="stylesheet" href="css3/8_Text.css">
 </head>
 <body>
     <h1>CSS3 Text</h1>
