--- a/CursoCss/CSS3/9_Web-Fonts.html
+++ b/CursoCss/CSS3/9_Web-Fonts.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Web Fonts</title>
-    <link rel="stylesheet" href="../css/css3/9_Web_fonts.css">
+    <link rel="stylesheet" href="css3/9_Web_fonts.css">
 </head>
 <body>
     <h1>CSS3 Web Fonts</h1>
