--- a/CursoCss/CSS3/3_Border Images.html
+++ b/CursoCss/CSS3/3_Border Images.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Border Images</title>
-    <link rel="stylesheet" href="../css/css3/3_Border Images.css">
+    <link rel="stylesheet" href="css3/3_Border Images.css">
 </head>
 <body>
     <h1>CSS3 Border Images</h1>
