--- a/CursoCss/CSS3/7_Shadow Effects.html
+++ b/CursoCss/CSS3/7_Shadow Effects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CSS3 Shadow Effects</title>
-    <link rel="stylesheet" href="../css/css3/7_Shadow Effects.css">
+    <link rel="stylesheet" href="css3/7_Shadow Effects.css">
 </head>
 <body>
     <h1>CSS3 Shadow Effects</h1>
