File Scope added

--- a/Curso JavaScript/15_Scope.html
+++ b/Curso JavaScript/15_Scope.html
@@ -7,7 +7,12 @@
         html, body {
           font-size: 16px;
           font-family: Verdana, sans-serif;
-          background-color: white;
+          width: 75%;
+          margin: 10px auto;
+        }
+        h2 {
+          font-weight: 100;
+          text-align: center;
         }
         b {
           color: crimson;
@@ -16,7 +21,7 @@
         div {
           background-color: greenyellow;
           padding: 15px;
-          width: 900px;
+          max-width: 900px;
           border-left: 5px solid rebeccapurple;
         }
         code {
