--- a/Curso JavaScript/Framework/Jquery/10_Stop.html
+++ b/Curso JavaScript/Framework/Jquery/10_Stop.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>jQuery Effect - Stop Animations</title>
-    <link rel="stylesheet" href="myCss-style.css">
+    <link rel="stylesheet" href="https://mycssframework.000webhostapp.com/myCss-style.css">
     <style>
         #panel, #flip {
             padding: 5px;
