CSS Transorm update

--- a/CursoCss/CSS3/10_2D Transforms.html
+++ b/CursoCss/CSS3/10_2D Transforms.html
@@ -33,6 +33,9 @@
     <div id="vertical-center">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. At, id.
     </div>
+    <div id="other-translate">
+        <p>Eixo x é primeiro parâmetro, movendo o objeto horizontalmente (pra direita, pra esquerda). O eixo y, é o segundo parâmetro, movendo o objeto verticalmente (pra cima, pra baixo).</p>
+    </div>
     <br><br><br><br><br><br>
     <hr>
     <h2>The rotate() Method</h2>
@@ -48,6 +51,13 @@
     <div id="myDiv">
         The rotate() method rotates an element clockwise or counter-clockwise. This div element is rotated clockwise 20 degrees.
     </div>
+
+    <div id="rotate2">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident, architecto.
+    </div>
+    <div id="myDiv2">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse dolore repellat rerum blanditiis labore delectus provident..
+    </div>
     <hr>
     <h2>Scale() Method</h2>
 
@@ -58,7 +68,11 @@
 
     <div id="scale">
         This div element is two times of its original width, and three times of its original height.
-    </div><br><br><br><hr>
+    </div>
+    <div id="scale2">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe dolores sed voluptates, similique alias minus repellendus ipsa iure consequatur. Recusandae!
+    </div>
+    <br><br><br><hr>
 
     <h2>Skew()method</h2>
     <p>Modfica os angulos dos elementos, podendo também modificar individualmente os angulos utilizando o SkeyX e SkewY</p><br>
