File background change

--- a/CursoCss/CSS3/4_Backgrounds.html
+++ b/CursoCss/CSS3/4_Backgrounds.html
@@ -19,13 +19,57 @@
         <li>background-clip</li>
     </ul>
     <hr>
-    <h2>CSS3 Multiple Backgrounds</h2>
+
+    <h2>CSS Multiple Backgrounds</h2>
+    <p>CSS allows you to add multiple background images for an element, through the 
+    <code class="w3-codespan">background-image</code> property.</p>
+    <p>The different background images are separated by commas, and the images are 
+    stacked on top of each other, where the first image is closest to the viewer.</p>
+    <p>The following example has two background images, the first image is a flower 
+    (aligned to the bottom and right) and the second image is a paper background (aligned to the top-left corner):</p>
+
     <div id="example1">
-    <p><h1>Lorem Ipsum Dolor</h1>
-    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna
-    aliquam erat volutpat.</p>
+        <h3>Lorem Ipsum Dolor</h3>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+        <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+    </div>
+    <hr>
+
+
+    <h2>CSS Background Size</h2>
+    <p>The CSS <code class="w3-codespan">background-size</code> property allows you to specify the size of background images.</p>
+    <p>The size can be specified in lengths, percentages, or by using one of the two 
+    keywords: contain or cover.</p>
+    <p>The following example resizes a background image to much smaller than the original image (using pixels):</p>
+
+    <div id="example2">
+    <h2>Lorem Ipsum Dolor</h2>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
     <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-    </p>
+    </div>
+
+    <p>Original size of the background-image:</p>
+    <div id="example3">
+    <h2>Lorem Ipsum Dolor</h2>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+    <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+    </div>
+
+    <p>The following example illustrates the use of contain and cover:</p>
+
+    <h2>background-size: contain:</h2>
+    <div class="div1">
+    <p>Lorem ipsum dolor sit amet.</p>
+    </div>
+
+    <h2>background-size: cover:</h2>
+    <div class="div2">
+    <p>Lorem ipsum dolor sit amet.</p>
+    </div>
+
+    <h2>No background-size defined:</h2>
+    <div class="div3">
+    <p>Lorem ipsum dolor sit amet.</p>
     </div>
 </body>
 </html>
