--- a/Curso JavaScript/30_Comparison.html
+++ b/Curso JavaScript/30_Comparison.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Comparison</title>
     <style>
-
         body {
             font-size: 16px;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -29,11 +28,12 @@
         }
 
     </style>
-    
 </head>
 <body>
     <h2>JavaScript Comparison and Logical Operators</h2>
+    <hr>
     <p>Comparison and Logical operators are used to test for true or false.</p>
+    <hr>
 
     <h2>Operator of Comparison</h2>
     <p>Comparison operators are used in logical statements to determine equality or difference between variables or values.</p>
@@ -42,6 +42,9 @@
     <p id="demo"></p>
     <p id="demo1"></p>
     <p id="demo2"></p>
+    <p id="nom1"></p>
+    <p><b>Obs.:</b> Se comparar um número com uma string ou com strings numéricas, cada string é convertido para um número e então a comparação é realizada numericamente.</p>
+    <p><b>Obs.:</b> A conversão de valores só irá acontecer, caso a váriavel tenha um valor númerico e seja comparada com uma string numérica ou string. Comparando uma string númerica com uma string, o resultado é falso.</p>
 
     <h3>Equals value and Equals type</h3>
     <p id="demo3"></p>
