File update: added background-origin and background-clip

--- a/CursoCss/CSS3/4_Backgrounds.html
+++ b/CursoCss/CSS3/4_Backgrounds.html
@@ -71,5 +71,67 @@
     <div class="div3">
     <p>Lorem ipsum dolor sit amet.</p>
     </div>
+    <hr>
+
+
+    <h2>CSS background-origin Property</h2>
+    <p>The CSS <code class="w3-codespan">background-origin</code> property specifies where the background image is 
+    positioned.</p>
+    <p>The property takes three different values:</p>
+    <ul>
+        <li>border-box - the background image starts from the upper left corner of the border</li>
+        <li>padding-box - (default) the background image starts from the upper left corner of the padding edge</li>
+        <li>content-box - the background image starts from the upper left corner of the content</li>
+    </ul>
+    <p>The following example illustrates the <code class="w3-codespan">background-origin</code> property:</p>
+
+    <p>No background-origin (padding-box is default):</p>
+    <div id="exp1">
+        <h2>Lorem Ipsum Dolor</h2>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+        <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+    </div>
+
+    <p>background-origin: border-box:</p>
+    <div id="exp2">
+        <h2>Lorem Ipsum Dolor</h2>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+        <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+    </div>   
+
+    <p>background-origin: content-box:</p>
+    <div id="exp3">
+        <h2>Lorem Ipsum Dolor</h2>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+        <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+    </div>
+    <hr>
+
+    <h2>CSS background-clip Property</h2>
+    <p>The CSS <code class="w3-codespan">background-clip</code> property specifies the painting area of the background.</p>
+    <p>The property takes three different values:</p>
+    <ul>
+        <li>border-box - (default) the background is painted to the outside edge of the border</li>
+        <li>padding-box - the background is painted to the outside edge of the padding</li>
+        <li>content-box - the background is painted within the content box</li>
+    </ul>
+    <p>The following example illustrates the <code class="w3-codespan">background-clip</code> property:</p>
+
+    <p>No background-clip (border-box is default):</p>
+    <div id="ex1">
+    <h2>Lorem Ipsum Dolor</h2>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+    </div>
+
+    <p>background-clip: padding-box:</p>
+    <div id="ex2">
+    <h2>Lorem Ipsum Dolor</h2>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+    </div>
+
+    <p>background-clip: content-box:</p>
+    <div id="ex3">
+    <h2>Lorem Ipsum Dolor</h2>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
 </body>
 </html>
